Can't believe it: one more cset (04-27) which never found his way to the central repository (incredible that I forgot to push, but why not). So unfortunately the bugfix missed 3.23.57 and will be in .58 :( Instead of looking like working (bug #198), replication between a 3.23 slave and 4.0 master should frankly stop. Here we detect 4.0 masters in the 3.23 slave code when we see a strange Rotate event, and in that case we print an error and stop. 4.0.13 and older masters will be "often" caught (see the patch); 4.0.14 and newer masters will always be immediately caught.